alto contraste bug

--- a/frontend/src/Components/About/AboutSection2/AboutSection2.module.css
+++ b/frontend/src/Components/About/AboutSection2/AboutSection2.module.css
@@ -69,6 +69,8 @@
   line-height: 30px;
   letter-spacing: -0.27px;
   margin-top: 36px;
+  text-align: justify;
+
 }
 
 @media (max-width: 991px) {
